# anon-prometheus-eval

./: README.md
eval/: README.md  get_report.py  pyproject.toml  run_evaluate.py
libs/prometheus-eval/: pyproject.toml
train/recipes/prometheus-v2.0/: README.md  merge_adapter.py  prepare_dataset.py
train/recipes/prometheus-v2.0/sft/: config_full_1.yaml  config_full_10.yaml  config_full_11.yaml  config_full_12.yaml  config_full_2.yaml  config_full_3.yaml
