[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.9.0"
aiolimiter = "^1.1.0"
tqdm = "^4.66.1"
black = "^23.12.1"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.2"
isort = "^5.13.2"
scipy = "^1.12.0"
nvitop = "^1.3.2"
peft = "^0.8.2"
transformers = "^4.37.2"
datasets = "^2.17.0"
litellm = "^1.27.14"
google-generativeai = "^0.3.2"
loguru = "^0.7.2"
krippendorff = "^0.6.1"
numpy = "^1.26.4"
tabulate = "^0.9.0"
anthropic = "^0.21.3"
google-cloud-aiplatform = "^1.48.0"
fastchat = "^0.1.0"
plotly = "^5.22.0"
vllm = "^0.4.2"
tokencost = "0.1.7"
csvtex = "^1.0.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
